task-12/02-cloudformation/cf-task-12.yml
AWSTemplateFormatVersion: 2010-09-09
Description: This template creates two EC2 instances and Security Groups

Parameters:
  InstanceName:
    Description: Please enter Instance Name
    Type: String
    Default: web-server
  InstanceType:
    Description: Please choose a supported instance type
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.medium
      - t2.large
  StageName:
    Type: String
    Description: Please choose a supported stage
    Default: dev
    AllowedValues:
      - dev
      - prod
  WebServerImageId:
    Type: AWS::EC2::Image::Id
    Description: Please enter the Image ID for the web server
  DatabaseServerImageId:
    Type: AWS::EC2::Image::Id
    Description: Please enter the Image ID for the database server
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: Please enter the VPC ID
  WebServerSubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Please enter the Subnet ID for the web server
  DatabaseServerSubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Please enter the Subnet ID for the database server
  KeyPairName:
    Type: String
    Description: Please enter the name for the new Key Pair

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for SSH and HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: '-1'
          CidrIp: 0.0.0.0/0

  DatabaseServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for MySQL
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          DestinationSecurityGroupId: !Ref WebServerSecurityGroup

  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref WebServerImageId
      InstanceType: !Ref InstanceType
      SubnetId: !Ref WebServerSubnetId
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: !Ref InstanceName
        - Key: Stage
          Value: !Ref StageName

  DatabaseServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref DatabaseServerImageId
      InstanceType: !Ref InstanceType
      SubnetId: !Ref DatabaseServerSubnetId
      SecurityGroupIds:
        - !Ref DatabaseServerSecurityGroup
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: database-server
        - Key: Stage
          Value: !Ref StageName

  NewKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Ref KeyPairName

Outputs:
  WebServerInstanceID:
    Description: The Instance ID of the web server
    Value: !Ref WebServerInstance
  DatabaseServerInstanceID:
    Description: The Instance ID of the database server
    Value: !Ref DatabaseServerInstance
  NewKeyPairName:
    Description: The name of the newly created Key Pair
    Value: !Ref KeyPairName
